# GliderThrow_Meter

./: .gitignore  LICENCE  README.md  buildAll.sh
Esp_mad_Client/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
Esp_mad_Client/main/: CMakeLists.txt  component.mk  esp_mad_client.cpp  esp_mad_task_http_client.c  esp_mad_task_measure.cpp
Esp_mad_Server/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
Esp_mad_Server/main/: CMakeLists.txt  component.mk  esp_mad.cpp  esp_mad_task_http_server.c  esp_mad_task_measure.cpp
Esp_mad_Server/main/WebsiteFiles/: esp.html
FreeCad & Stl/: ContreAileron.FCStd  ContreAileron.stl  GliderThrowPocket-bottom.FCStd  GliderThrowPocket-bottom.stl  GliderThrowPocket-top.FCStd  GliderThrowPocket-top.stl
Fritzing/V1.0/: Esp_Mad_v1.0.fzz
Fritzing/V1.1/: Esp_Mad_V1.1-CarteMCU.fzz  Esp_Mad_V1.1_CarteMPU.fzz
Fritzing/V1.2/: Esp_Mad_V1.2_CarteMPU.fzz
Fritzing/V1.3/: Esp_Mad_V1.3_CarteMPU.fzz
Includes/: Esp_mad.h  Esp_mad_Globals_Variables.h
docs/: .readthedocs.yaml  Doxyfile  conf.py  index.rst
docs/_SequenceDiagram/: GliderThrowSequence.plantuml  Repeteur169Mhz.plantuml
docs/_bom/: Bom_revF.xlsx  bom.xlsx  bom_revE.csv  bom_revE.xlsx  ~$bom.xlsx
docs/_decal/: Decal.ai
docs/_pick&place/: PnP_ESP_MAD_RevF_front_forSmtAssistant .txt  PnP_ESP_MAD_front_forSmtAssistant .txt
docs/_static/: .~lock.schémas.odg#  schémas.odg
docs/_stl/: bottomBox.stl  bottomCase.stl  peg.stl  topBox.stl  topCase.stl
docs/_suivi-revisions/: CalculSurface.xlsx  SuiviDesRévisions-20201111.docx  SuiviDesRévisions.docx  (+1 more)
(+216 files in other folders)
